--- a/style/style.css
+++ b/style/style.css
@@ -360,12 +360,12 @@
 
 .stock__inner {
     display: grid;
-    grid-template-columns: max-content 1fr 1fr;
+    grid-template-columns:  1fr 1fr;
     grid-template-rows: auto auto;
 }
 
 
-@media (max-width:1280px) {
+@media (max-width:1570px) {
     .stock__inner {
         grid-template-columns: 50% 50%;
     }
@@ -397,7 +397,7 @@
     height: 132px;
 }
 
-@media (max-width:1024px) {
+@media (max-width:1570px) {
     .stock-title__icon::before {
         display: block;
     }
@@ -424,7 +424,7 @@
 }
 
 
-@media(max-width:1280px) {
+@media(max-width:1570px) {
     .stock__title {
         grid-column: 1/2;
     }
@@ -463,7 +463,7 @@
 }
 
 
-@media (min-width:651px) and (max-width:1280px) {
+@media (min-width:651px) and (max-width:1570px) {
     .stock__img {
         grid-row: 1/4;
         flex-direction: column;
