Add stock img row gap

--- a/style/style.css
+++ b/style/style.css
@@ -451,6 +451,7 @@
 
 .stock__img {
     display: flex;
+    column-gap: 32px;
     justify-content: center;
     grid-row: 3/4;
     grid-column: 2/3;
